# mcp_libs

./: .clinerules  .env.example  .gitignore  .gitmodules  .tool-versions  GIT_SETUP.md  MCP_SETTINGS_SETUP.md  Makefile  README.md  check_repos.sh  cline_mcp_settings.template.json  generate_settings.sh
github-mcp/: package.json
mcp-pdf/: README.md  pyproject.toml
mcp-pdf/src/mcp_server_pdf/: __init__.py  __main__.py  server.py
mcp-postgres/: README.md  pyproject.toml  test_connection.py
mcp-postgres/src/mcp_server_postgres/: __init__.py  __main__.py  models.py  server.py  utils.py
mcp-postgres/src/mcp_server_postgres/tools/: __init__.py  analyze.py  describe.py  list_tables.py  query.py  sample.py
mcp-server-github/: .gitignore  mcp_server_github.py  requirements.txt
