[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-postgres"
version = "0.1.0"
description = "MCP server for PostgreSQL - Provides read-only database access and schema information"
readme = "README.md"
authors = [{ name = "Cline" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.2.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-postgres = "mcp_server_postgres.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}